--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,5 +1,9 @@
+# Dynamic inventory will be created by Jenkins
+# This file is provided as a fallback/template
+
 [ec2]
-13.53.111.50 ansible_user=ubuntu ansible_ssh_private_key_file="/home/gayanshaminda2001/ansible/E-commerece-key-pair.pem"
+# This will be replaced by the actual IP from Terraform output
+ec2_host ansible_user=ubuntu
 
 [ec2:vars]
 ansible_python_interpreter=/usr/bin/python3
