--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,9 +1,9 @@
-# Dynamic inventory will be created by Jenkins
-# This file is provided as a fallback/template
+# This file now serves as a template only
+# The actual inventory will be dynamically created during pipeline execution
 
 [ec2]
-# This will be replaced by the actual IP from Terraform output
-ec2_host ansible_user=ubuntu
+# IP will be dynamically populated from Terraform output
+ansible_host ansible_user=ubuntu
 
 [ec2:vars]
 ansible_python_interpreter=/usr/bin/python3
