only ansible stage modified

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -76,31 +76,33 @@ pipeline {
                 }
             }
         }
+
         stage('Ansible Deployment') {
-            steps {
-                dir(ANSIBLE_DIR) {
-                    withCredentials([sshUserPrivateKey(credentialsId: 'ec2-ssh-key',
-                         keyFileVariable: 'SSH_KEY',
-                         usernameVariable: 'SSH_USER'),
-                    usernamePassword(credentialsId: 'docker-hub-credentials',
-                         usernameVariable: 'DOCKER_HUB_USERNAME', passwordVariable: 'DOCKER_HUB_PASSWORD')]) {
-                        script {
-                            def gitCommitHash = bat(script: 'wsl git rev-parse --short HEAD', returnStdout: true).trim().readLines().last()
-                            
-                            // Create inventory file properly - fixed command syntax
-                            writeFile file: 'temp_inventory.ini', text: """[ec2]
+    steps {
+        dir(ANSIBLE_DIR) {
+            withCredentials([
+                usernameVariable('SSH_USER', 'ec2-ssh-key'),
+                usernamePassword(credentialsId: 'docker-hub-credentials',
+                    usernameVariable: 'DOCKER_HUB_USERNAME', passwordVariable: 'DOCKER_HUB_PASSWORD')]) {
+                script {
+                    def gitCommitHash = bat(script: 'wsl git rev-parse --short HEAD', returnStdout: true).trim().readLines().last()
+                    
+                    // Create inventory file properly
+                    writeFile file: 'temp_inventory.ini', text: """[ec2]
 ${env.EC2_IP} ansible_user=${SSH_USER}
 
 [ec2:vars]
 ansible_python_interpreter=/usr/bin/python3
 """
-                            // Use the inventory file with ansible-playbook
-                            bat "wsl ansible-playbook -i temp_inventory.ini deploy.yml -u ${SSH_USER} --private-key ${SSH_KEY} -e \"DOCKER_HUB_USERNAME=${DOCKER_HUB_USERNAME} GIT_COMMIT_HASH=${gitCommitHash}\""
-                        }
-                    }
+                    // Use the WSL path directly to the key file
+                    bat "wsl ansible-playbook -i temp_inventory.ini deploy.yml -u ${SSH_USER} --private-key /home/gayanshaminda2001/ansible/E-commerece-key-pair.pem -e \"DOCKER_HUB_USERNAME=${DOCKER_HUB_USERNAME} GIT_COMMIT_HASH=${gitCommitHash}\""
                 }
             }
         }
+    }
+}
+
+
     }
     post {
         always {
