--- a/jenkinsfile
+++ b/jenkinsfile
@@ -85,23 +85,22 @@ pipeline {
         dir(ANSIBLE_DIR) {
             withCredentials([
                 sshUserPrivateKey(credentialsId: 'ec2-ssh-key', 
-                                 usernameVariable: 'SSH_USER', 
-                                 keyFileVariable: 'SSH_KEY_FILE'),
+                                 usernameVariable: 'SSH_USER'),
                 usernamePassword(credentialsId: 'docker-hub-credentials',
                     usernameVariable: 'DOCKER_HUB_USERNAME', 
                     passwordVariable: 'DOCKER_HUB_PASSWORD')]) {
                 script {
                     def gitCommitHash = bat(script: 'wsl git rev-parse --short HEAD', returnStdout: true).trim().readLines().last()
                     
-                    // Create inventory file properly
+                    // Create inventory file
                     writeFile file: 'temp_inventory.ini', text: """[ec2]
 ${env.EC2_IP} ansible_user=${SSH_USER}
 
 [ec2:vars]
 ansible_python_interpreter=/usr/bin/python3
 """
-                    // Instead of using a hardcoded path, use the SSH_KEY_FILE variable
-                    bat "wsl ansible-playbook -i temp_inventory.ini deploy.yml -u ${SSH_USER} --private-key \${SSH_KEY_FILE} -e \"DOCKER_HUB_USERNAME=${DOCKER_HUB_USERNAME} GIT_COMMIT_HASH=${gitCommitHash}\""
+                    // Use the key file directly with its WSL path
+                    bat "wsl ansible-playbook -i temp_inventory.ini deploy.yml -u ${SSH_USER} --private-key /home/gayanshaminda2001/ansible/E-commerece-key-pair.pem -e \"DOCKER_HUB_USERNAME=${DOCKER_HUB_USERNAME} GIT_COMMIT_HASH=${gitCommitHash}\""
                 }
             }
         }
