--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,6 @@ pipeline {
         WORKSPACE = 'C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\E-Commerce-DevOps-Pipeline'
         NO_PROXY = '*.docker.io,registry-1.docker.io'
         WSL_SSH_KEY = '/home/gayanshaminda2001/ansible/E-commerece-key-pair.pem'
-        TERRAFORM_PARALLELISM = '10' // Parallel operations for Terraform
     }
     stages {
         stage('Checkout') {
@@ -59,113 +58,19 @@ pipeline {
                 }
             }
         }
-        stage('Terraform Initialize') {
+        stage('Terraform Infrastructure') {
             steps {
                 dir(TERRAFORM_DIR) {
                     withCredentials([[$class: 'AmazonWebServicesCredentialsBinding',
                          credentialsId: 'aws-credentials',
                          accessKeyVariable: 'AWS_ACCESS_KEY_ID',
                          secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-                        // Use -upgrade to ensure latest providers
-                        bat "wsl terraform init -input=false -upgrade"
+                        bat "wsl terraform init"
+                        bat "wsl terraform apply -auto-approve -var=\"region=${AWS_REGION}\""
                         
-                        // Create backend.tf file for S3 state storage if it doesn't exist
-                        script {
-                            def backendFileExists = bat(script: 'wsl test -f backend.tf && echo "exists" || echo "not exists"', returnStdout: true).trim().contains("exists")
-                            if (!backendFileExists) {
-                                writeFile file: 'backend.tf', text: '''
-terraform {
-  backend "s3" {
-    bucket         = "ecommerce-terraform-state-bucket"
-    key            = "terraform/state/ecommerce.tfstate"
-    region         = "eu-north-1"
-    dynamodb_table = "terraform-state-lock"
-    encrypt        = true
-  }
-}
-'''
-                                // Only run backend migration if the file was just created
-                                bat "wsl terraform init -force-copy -input=false"
-                            }
-                        }
-                    }
-                }
-            }
-        }
-        stage('Terraform Plan') {
-            steps {
-                dir(TERRAFORM_DIR) {
-                    withCredentials([[$class: 'AmazonWebServicesCredentialsBinding',
-                         credentialsId: 'aws-credentials',
-                         accessKeyVariable: 'AWS_ACCESS_KEY_ID',
-                         secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-                        script {
-                            // Check if output file exists (meaning infrastructure might already exist)
-                            def outputExists = bat(script: 'wsl terraform output -json &>/dev/null && echo "exists" || echo "not exists"', returnStdout: true).trim().contains("exists")
-                            
-                            if (outputExists) {
-                                // Try to get existing IP to check if infrastructure exists
-                                try {
-                                    env.EXISTING_EC2_IP = bat(script: 'wsl terraform output -raw public_ip 2>/dev/null || echo ""', returnStdout: true).trim().readLines().last()
-                                    echo "Found existing infrastructure with IP: ${env.EXISTING_EC2_IP}"
-                                } catch (Exception e) {
-                                    env.EXISTING_EC2_IP = ""
-                                    echo "No existing infrastructure detected"
-                                }
-                            }
-                            
-                            // Run terraform plan with detailed exit code to automatically detect changes
-                            def planExitCode = bat(script: "wsl terraform plan -detailed-exitcode -var=\"region=${AWS_REGION}\" -out=tfplan", returnStatus: true)
-                            // Exit code 0 = No changes, 1 = Error, 2 = Changes present
-                            env.TERRAFORM_CHANGES = planExitCode == 2 ? 'true' : 'false'
-                            
-                            if (env.TERRAFORM_CHANGES == 'true') {
-                                echo "Infrastructure changes detected - will apply changes"
-                            } else {
-                                echo "No infrastructure changes detected - will skip apply stage"
-                            }
-                        }
-                    }
-                }
-            }
-        }
-        stage('Terraform Apply') {
-            when {
-                expression { return env.TERRAFORM_CHANGES == 'true' }
-            }
-            steps {
-                dir(TERRAFORM_DIR) {
-                    withCredentials([[$class: 'AmazonWebServicesCredentialsBinding',
-                         credentialsId: 'aws-credentials',
-                         accessKeyVariable: 'AWS_ACCESS_KEY_ID',
-                         secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-                        // Apply with parallelism for faster resource creation
-                        bat "wsl terraform apply -parallelism=${TERRAFORM_PARALLELISM} -input=false tfplan"
-                        
-                        // Capture the EC2 IP from Terraform output
+                        // Capture the EC2 IP from Terraform output - fixed command
                         script {
                             env.EC2_IP = bat(script: 'wsl terraform output -raw public_ip', returnStdout: true).trim().readLines().last()
-                            // Add a small wait for EC2 instance to initialize (reduces SSH connection issues)
-                            echo "Waiting 30 seconds for EC2 instance to initialize..."
-                            sleep(30)
-                        }
-                    }
-                }
-            }
-        }
-        stage('Get Existing Infrastructure') {
-            when {
-                expression { return env.TERRAFORM_CHANGES == 'false' && env.EXISTING_EC2_IP?.trim() }
-            }
-            steps {
-                dir(TERRAFORM_DIR) {
-                    withCredentials([[$class: 'AmazonWebServicesCredentialsBinding',
-                         credentialsId: 'aws-credentials',
-                         accessKeyVariable: 'AWS_ACCESS_KEY_ID',
-                         secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-                        script {
-                            env.EC2_IP = env.EXISTING_EC2_IP
-                            echo "Using existing infrastructure with IP: ${env.EC2_IP}"
                         }
                     }
                 }
@@ -175,11 +80,6 @@ terraform {
             steps {
                 dir(ANSIBLE_DIR) {
                     script {
-                        // Verify EC2_IP is set
-                        if (!env.EC2_IP?.trim()) {
-                            error "EC2 IP address not set. Cannot proceed with deployment."
-                        }
-                        
                         // Create directories if they don't exist
                         bat '''
                             if not exist ansible mkdir ansible
@@ -205,7 +105,7 @@ ${env.EC2_IP} ansible_user=ubuntu ansible_ssh_private_key_file=${WSL_SSH_KEY}
 
 [ec2:vars]
 ansible_python_interpreter=/usr/bin/python3
-ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ConnectTimeout=60'
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 """
                             // Run Ansible playbook
                             def result = bat(
@@ -238,7 +138,6 @@ ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ConnectTimeout=60'
         }
         success {
             echo 'Deployment completed successfully!'
-            echo "Application deployed to: http://${env.EC2_IP}"
         }
         failure {
             echo 'Deployment failed!'
