--- a/.env
+++ b/.env
@@ -21,3 +21,6 @@ admin_password=123456
 
 coustmer_email=dewwa@gmail.com 
 coustmer_password=123456
+
+DOCKER_HUB_USERNAME = gayanshaminda2001
+GIT_COMMIT_HASH="latest"
