--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         WORKSPACE = 'C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\E-Commerce-DevOps-Pipeline'
         NO_PROXY = '*.docker.io,registry-1.docker.io'
         WSL_SSH_KEY = '/home/gayanshaminda2001/ansible/E-commerece-key-pair.pem'
-        TERRAFORM_PARALLELISM = '10' // Parallel operations for Terraform
+        TERRAFORM_PARALLELISM = '10' 
     }
     stages {
         stage('Checkout') {
